codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1374
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to pause)                   
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit · ⌃ + o queue · /queue           
                                                
› Ask Codex to do anything                      
                                                
  ? for shortcuts            100% context left
